test/lambda/negative/syntax/unexpected_token.ls
// @expect-error: E200
// @description: Spread operator on scalar value

let x = + * 5
